chore: fixed navigation bar

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,9 +2,11 @@
 $main: #fff3ec;
 $stroke: #2c3e50;
 $highlight: #34495e;
-$secondary: #ffc0ad;
+$secondary: #2f3542;
 $tertiary: #9656a1;
-$color-font: #fff3ec;
+$font-color: #ffa502;
+$font-color2: #2ed573;
+$main2: #ffa502;
 
 //Sizes
 $title: 32px;
