--- a/src/scss/navigation/_navigation.scss
+++ b/src/scss/navigation/_navigation.scss
@@ -1,6 +1,24 @@
 .navigation {
- 
-  
+  width: 100%;
+  display: flex;
+  height: 150px;
+  align-items: center;
+  justify-content: center;
+  &__list {
+    display: flex;
+    justify-content: center;
+    a {
+      padding: 0 25px;
+      color: $font-color;
+      font-size: $title-desktop;
+    }
+  }
+}
+/* 
+.navigation__List__item a {
+    color: $color-font2;
+  }
+
   padding: 2px;
   @include desktop {
     padding: 1px;
@@ -12,8 +30,8 @@
     justify-content: space-between;
 
     &__item:hover {
-      background-color: $main;
-      color: $secondary;
+      background-color: $main2;
+
       border-radius: 5px;
       padding-left: 1px;
       padding-right: 1px;
@@ -29,5 +47,4 @@
       }
       font-weight: bold;
     }
-  }
-}
+  } */
