--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,12 +9,8 @@
 
 //Estilos generales o de layout
 
-
-
-
-
 body {
-  background-color: #2f3542;
+  background-color: #222222;
   margin: 0;
   
 }
