--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -5,7 +5,7 @@
 // }
 
 @mixin tablet {
-  @media screen and (min-width: #{$tablet}) {
+  @media screen and (max-width: #{$tablet}) {
     @content;
   }
 }
@@ -15,13 +15,13 @@
 // }
 
 @mixin desktop {
-  @media screen and (min-width: #{$desktop}) {
+  @media screen and (max-width: #{$desktop}) {
     @content;
   }
 }
 
 @mixin movil {
-  @media screen and (min-width: #{$movil}) {
+  @media screen and (max-width: #{$movil}) {
     @content;
   }
 }
