--- a/src/scss/navigation/_navigation.scss
+++ b/src/scss/navigation/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   width: 100%;
   display: flex;
-  height: 150px;
+  height: 100px;
   align-items: center;
   justify-content: center;
   &__list {
@@ -12,8 +12,29 @@
       color: $font-color;
       font-size: $title-desktop;
     }
+    @include tablet {
+      .navigation__list__item {
+        a {
+          font-size: $title-tablet;
+          padding: 0 8px;
+        }
+      }
+    }
+    a:hover {
+      color: $font-color3;
+    }
+  }
+  @include movil {
+    .navigation__list__item {
+      a {
+        font-size: $title-movil;
+        padding: 0 5px;
+        font-size: 18px;
+      }
+    }
   }
 }
+
 /* 
 .navigation__List__item a {
     color: $color-font2;
