added navbar, hero and gallery styles

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,11 +11,13 @@ $main2: #ffa502;
 
 //Sizes
 $title: 32px;
-$title-desktop: 35px;
+$title-desktop: 40px;
 $title-tablet: 28px;
-$title-movil: 20px;
+$title-movil: 18px;
 $subtitle: 25px;
 $subtitle-desktop: 34px;
+$subtitle-tablet: 24px;
+$subtitle-movil: 14px;
 $paragraph: 16px;
 $paragraph-desktop: 20px;
 $navigation: 20px;
@@ -24,7 +26,7 @@ $navigation-desktop: 30px;
 //screen-sizes
 $tablet: 680px;
 $desktop: 992px;
-$movil: 500px;
+$movil: 370px;
 
 //border
 $border-size: 5px;
