--- a/src/scss/section/hero/_hero.scss
+++ b/src/scss/section/hero/_hero.scss
@@ -1,27 +1,64 @@
 .hero {
   margin-top: 100px;
-  &__container-subtitle > h1 h2 {
-    font-size: $paragraph;
-    @include desktop {
-      font-size: $paragraph-desktop;
-    }
-  }
 
   .content-center {
-    position: relative;
+    display: flex;
+    width: 100%;
 
-    img {
+    &__container-image {
+      display: flex;
       width: 100%;
-    }
-
-    &__container-subtitle {
-      position: absolute;
-      bottom: 15px;
+      justify-content: center;
       text-align: center;
-      width: 100%;
-      h1, h2 {
-        color: $main;
+      align-items: flex-end;
+
+      img {
+        width: 100%;
       }
+
     }
+
+    .content-center__container-subtitle {
+      position: absolute;
+      align-items: center;
+      color: $main;
+
+      h1 {
+        font-size: $title-desktop;
+      }
+
+      h2 {
+        font-size: $subtitle-desktop;
+      }
+
+      @include tablet {
+
+        h1 {
+          font-size: $title-tablet;
+        }
+
+        h2 {
+          font-size: $subtitle-tablet;
+
+
+        }
+
+
+
+        @include movil {
+          h1 {
+            font-size: $title-movil;
+          }
+
+          h2 {
+            font-size: $subtitle-movil;
+          }
+        }
+
+      }
+
+    }
+
+
   }
 }
