--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,10 +1,38 @@
 // Typography
 @import url("https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Oswald:wght@200&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=Nunito+Sans:wght@200&display=swap');
+
+
 @import "./variables";
 @import "./mixins";
 
+/* 
 * {
   font-family: "Gideon Roman", cursive;
   font-family: "Oswald", sans-serif;
 }
+ */
 
+/* 
+* {
+  font-family: 'Roboto',
+  sans-serif;
+}
+ */
+
+/* * {
+  font-family: 'Lato',
+  sans-serif;
+} */
+
+* {
+  font-family: 'Lato',
+    sans-serif;
+  font-family: 'Nunito Sans',
+    sans-serif;
+}
