--- a/src/scss/section/gallery/_gallery.scss
+++ b/src/scss/section/gallery/_gallery.scss
@@ -1,6 +1,7 @@
 .gallery {
   width: 100%;
 
+ 
   .content-center__galerry-subtitle {
     text-align: center;
     color: $main;
@@ -18,14 +19,15 @@
   &__content {
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 25px;
     justify-content: space-around;
   }
 
   &__content-card {
-    width: 500px;
+    width: 450px;
+    height: auto;
     border-radius: 5px;
-    padding: 10px;
+    padding: 0 10px;
     background-color: $highlight;
     text-align: center;
     transition: all 200ms ease-out;
@@ -37,7 +39,6 @@
 
     h2 {
       color: $font-color3;
-      text-decoration: underline;
       padding: 5px 0;
     }
 
