added styles to about and footer

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@
 @import "./section/form/_form";
 @import "./footer/_footer";
 @import "./section/edu_exp/_edu-exp";
+@import "./section/about/_about";
 
 //Estilos generales o de layout
 
