--- a/src/scss/footer/_footer.scss
+++ b/src/scss/footer/_footer.scss
@@ -1,32 +1,28 @@
-footer {
-
+.container-footer {
+  display: flex;
+  flex-direction: column;
   color: $main;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
   margin-top: 15px;
   padding: 5px;
+  width: 100%;
+  text-align: center;
 
-  .container-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    align-items: center;
+  p {
+    margin: 5px 0;
   }
-
-p {
-    color: $main;
-}
+  
 
   .container-footer__icons {
-      display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 25px;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 0 5px;
   }
 
   img {
-    width: 100%;
-    margin: 5px;
+    width: 25px;
+    margin: 0 3px;
   }
+
 }
