--- a/src/scss/section/about/_about.scss
+++ b/src/scss/section/about/_about.scss
@@ -5,6 +5,7 @@
     gap: 25px;
     flex-wrap: wrap;
     padding: 5px;
+    margin-top: 100px;
 
     .container-about__img {
         width: 500px;
