--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,7 +17,7 @@ $title-movil: 18px;
 $subtitle: 25px;
 $subtitle-desktop: 34px;
 $subtitle-tablet: 24px;
-$subtitle-movil: 14px;
+$subtitle-movil: 12px;
 $paragraph: 16px;
 $paragraph-desktop: 20px;
 $navigation: 20px;
@@ -25,7 +25,9 @@ $navigation-desktop: 30px;
 
 //screen-sizes
 $tablet: 680px;
+$tablet2: 560px;
 $desktop: 992px;
+$movil2: 440px;
 $movil: 370px;
 
 //border
