--- a/src/scss/section/gallery/_gallery.scss
+++ b/src/scss/section/gallery/_gallery.scss
@@ -1,8 +1,8 @@
 .gallery {
   width: 100%;
-  padding: 5px;
+  padding: 25px 10px;
 
- 
+
   .content-center__galerry-subtitle {
     text-align: center;
     color: $main;
@@ -15,12 +15,39 @@
     h3 {
       font-size: $subtitle-desktop;
     }
+
+    @include tablet {
+
+      h2 {
+        font-size: $title-tablet;
+      }
+
+      h3 {
+        font-size: $subtitle-tablet;
+      }
+
+    }
+
+    @include movil {
+
+
+      h2 {
+        font-size: $title-tablet;
+      }
+
+      h3 {
+        font-size: $subtitle-tablet;
+      }
+
+    }
+
+
   }
 
   &__content {
     display: flex;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 15px;
     justify-content: space-around;
   }
 
@@ -36,7 +63,13 @@
     cursor: pointer;
     margin-top: 30px;
 
-
+    img {
+      padding: 10px 0;
+      border-radius: 15px;
+      width: 100%;
+      height: 450px;
+      object-fit: cover;
+    }
 
     h2 {
       color: $font-color3;
@@ -66,12 +99,7 @@
       }
     }
 
-    img {
-      border-radius: 5px;
-      width: 100%;
-      height: 450px;
-      object-fit: fill;
-    }
+
 
   }
 
