--- a/src/scss/section/about/_about.scss
+++ b/src/scss/section/about/_about.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     gap: 25px;
     flex-wrap: wrap;
-    padding: 5px;
+    padding: 5px 10px;
     margin-top: 100px;
 
     .container-about__img {
