fixed from Mavilde's disastre jajajaja

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,8 @@
 body {
   background-color: #222222;
   margin: 0;
-  
+  /* background: rgb(226, 255, 224);
+  background: linear-gradient(90deg, rgba(226, 255, 224, 1) 0%, rgba(255, 222, 160, 1) 100%);
+   */
 }
 
