--- a/src/scss/section/about/_about.scss
+++ b/src/scss/section/about/_about.scss
@@ -2,10 +2,11 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    gap: 25px;
+    gap: 35px;
     flex-wrap: wrap;
     padding: 5px 10px;
-    margin-top: 100px;
+    padding: 100px 20px 25px 20px;
+    align-items: center;
 
     .container-about__img {
         width: 500px;
@@ -17,19 +18,33 @@
     }
 
     .container-about__content {
-        width: 500px;
+        width: 650px;
         display: flex;
         flex-direction: column;
         justify-content: center;
 
-        h2 {
-            padding: 12px 0;
+        .container-about__work {
+            text-decoration: underline;
+        }
+
+        .container-about__work:hover {
+            background-color: $highlight;
+            color: $font-color3;
+        }
+
+
+        ul {
+            color: $stroke;
+        }
+
+        h3 {
+            padding: 5px 0;
             color: $main;
-            font-size: $subtitle-desktop;
+            font-size: $title-tablet;
         }
 
         p {
-            padding: 10px 0;
+            padding: 8px 0;
             color: $stroke;
         }
 
@@ -38,7 +53,7 @@
             h3 {
                 color: $main;
             }
-            
+
             h4 {
                 color: $main;
                 padding: 0;
