--- a/src/scss/navigation/_navigation.scss
+++ b/src/scss/navigation/_navigation.scss
@@ -4,6 +4,9 @@
   height: 80px;
   align-items: center;
   justify-content: center;
+  li {
+    list-style: none;
+  }
 
   &__list {
     display: flex;
