--- a/src/scss/section/edu_exp/_edu-exp.scss
+++ b/src/scss/section/edu_exp/_edu-exp.scss
@@ -17,7 +17,7 @@
     justify-content: center;
     width: 100%;
     gap: 20px;
-    padding: 5px;
+    padding: 0 20px;
 
     .container-resume__education-title {
 
