--- a/src/scss/section/gallery/_gallery.scss
+++ b/src/scss/section/gallery/_gallery.scss
@@ -2,7 +2,6 @@
   width: 100%;
   padding: 25px 20px;
 
-
   .content-center__galerry-subtitle {
     text-align: center;
     color: $main;
@@ -11,8 +10,6 @@
     h2 {
       font-size: $title-desktop;
     }
-
-   
 
     @include tablet {
 
@@ -29,7 +26,7 @@
         font-size: $title-tablet;
       }
 
-      
+
 
     }
 
@@ -41,63 +38,109 @@
     flex-wrap: wrap;
     gap: 15px;
     justify-content: space-around;
+
     h3 {
       color: $stroke;
     }
   }
 
   &__content-card {
+    position: relative;
     width: 450px;
-    height: auto;
+    height: 450px;
     border-radius: 5px;
-    padding: 0 10px;
-    background-color: $highlight;
-    text-align: center;
-    transition: all 200ms ease-out;
-    overflow: hidden;
     cursor: pointer;
     margin-top: 30px;
 
-    img {
-      padding: 10px 0;
-      border-radius: 15px;
+    .face {
+      position: absolute;
       width: 100%;
-      height: 450px;
-      object-fit: cover;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: .7s;
+      background-color: $highlight;
     }
-
-    h2 {
-      color: $font-color3;
-      padding: 5px 0;
-    }
-
     
+    .front {
+      
+      transform: perspective(600px) rotateY(0deg);
+      
+
+      img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 10px 0;
+        //border-radius: 15px;
+        object-fit: cover;
+      }
+
+      h2 {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 45px;
+        line-height: 45px;
+        color: $font-color3;
+        padding: 5px 0;
+        background: rgba(0, 0, 0);
+        text-align: center;
+      }
+    }
+
+    .back {
+      transform: perspective(600px) rotateY(180deg);
+      background-color: $highlight;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      padding: 0 10px;
+
+      h2 {
+        margin-top: 20px;
+        color: $font-color3;
+      }
+
+h3 {
+  margin-top: 20px;
+  //color: $font-color3;
+}
+
+      .gallery__content-card-icons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        //padding: 2px;
+        margin: 10px 5px;
+
+        img {
+          //margin: 0 10px;
+          width: 15%;
+          height: 100%;
+        }
+      }
+    }
 
     p {
       color: $stroke;
     }
 
-    .gallery__content-card-icons {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      //padding: 2px;
-      margin: 10px 5px;
-
-      img {
-        margin: 0 10px;
-        width: 10%;
-        height: 10%;
-      }
-    }
-
-
 
   }
 
-  &__content-card:hover {
-    box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.5);
-    transform: translateY(-3%);
+  &__content-card:hover .front {
+    //box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.5);
+    //transform: translateY(-3%);
+    transform: perspective(600px) rotateY(180deg);
+  }
+
+  &__content-card:hover .back {
+    //box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.5);
+    //transform: translateY(-3%);
+    transform: perspective(600px) rotateY(360deg);
   }
 
 }
