--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,8 +13,21 @@
 body {
   background-color: #222222;
   margin: 0;
-  /* background: rgb(226, 255, 224);
-  background: linear-gradient(90deg, rgba(226, 255, 224, 1) 0%, rgba(255, 222, 160, 1) 100%);
-   */
+   
 }
 
+body::-webkit-scrollbar {
+  width: 15px;
+  background-color: $stroke;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #222222;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $highlight;
+  background-image: -webkit-linear-gradient(90deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+  border-radius: 5px;
+}
