--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,20 +13,21 @@
 body {
   background-color: #222222;
   margin: 0;
+  padding: 0;
    
 }
 
 body::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
   background-color: $stroke;
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #222222;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: $highlight;
   background-image: -webkit-linear-gradient(90deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
   border-radius: 5px;
