--- a/src/scss/section/gallery/_gallery.scss
+++ b/src/scss/section/gallery/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   width: 100%;
-  padding: 25px 20px;
+  padding: 25px 15px;
 
   .content-center__galerry-subtitle {
     text-align: center;
@@ -43,8 +43,8 @@
 
   &__content-card {
     position: relative;
-    width: 550px;
-    height: 650px;
+    width: 450px;
+    height: 500px;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 30px;
@@ -81,7 +81,7 @@
         height: 45px;
         line-height: 45px;
         color: $font-color3;
-        padding: 5px 0;
+        padding: 0 1px;
         background: rgba(0, 0, 0);
         text-align: center;
       }
