--- a/src/scss/section/gallery/_gallery.scss
+++ b/src/scss/section/gallery/_gallery.scss
@@ -1,6 +1,7 @@
 .gallery {
   width: 100%;
   padding: 25px 15px;
+  margin-top: 4rem;
 
   .content-center__galerry-subtitle {
     text-align: center;
@@ -33,8 +34,9 @@
   &__content {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 3rem;
     justify-content: space-around;
+    margin: 4rem 0;
 
     h3 {
       color: $stroke;
